--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+
+.filter-selection {
+  @apply bg-white border border-gray-300 text-gray-900 text-sm rounded-lg w-full p-2.5 mt-1;
+}
