--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ body {
 .filter-selection {
   @apply bg-white border border-gray-300 text-gray-900 text-sm rounded-lg w-full p-2.5 mt-1;
 }
+
+.filter-labels {
+  @apply xxs:text-xs md:text-sm text-gray-900;
+}
